retoque en markdown

--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como nuestro objetivo es obtener un buen Recall nos vamos a quedar con el modelo SVC y vamos a intentar conseguir los mejores hiperparámetros"
+    "Como nuestro objetivo es obtener un buen Recall nos vamos a quedar con el modelo SVC y vamos a intentar conseguir los mejores hiperparámetros para intentar mejorar su accuracy"
    ]
   },
   {
